# essay_scoring

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  amr_similarity.py  app_types.py  code flow.md  config.py  coreference.py  detailed_report.md  future_scope.md  key_word_match.py  keyword_matcher.py  logger_utill.py  logger_utils.py  main.py  nltk_setup.py  pos_score.py  preprocess.py  pyproject.toml  readability.py  readbility.py  ruff.toml  score.py  semantic_match.py  settings.py  text_features.py
envs/: dev.yaml
